<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    >

    <include layout="@layout/ads"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:focusable="true"
            android:focusableInTouchMode="true">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tilName">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_username"
                    android:id="@+id/etName"
                    android:maxLines="1"
                    android:inputType="textCapWords"
                    android:nextFocusLeft="@id/etName"
                    android:nextFocusUp="@id/etName"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@id/tilDateOfBirth">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dateOfBirth"
                    android:textIsSelectable="false"
                    android:focusable="false"
                    android:inputType="none"
                    android:id="@id/etDateOfBirth"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/tilInstruments">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textIsSelectable="false"
                    android:focusable="false"
                    android:inputType="none"
                    android:hint="@string/setup_instruments_hint"
                    android:id="@+id/etInstruments"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/tilGenres">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textIsSelectable="false"
                    android:focusable="false"
                    android:inputType="none"
                    android:hint="@string/setup_genres_hint"
                    android:id="@+id/etGenres"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/tilFavouriteInstrument">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_profile_favourite_instument_hint"
                    android:textIsSelectable="false"
                    android:focusable="false"
                    android:inputType="none"
                    android:id="@+id/etFavouriteInstrument"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:text="@string/edit_profile_about_me"
                android:textSize="19sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtAboutMeDescription"
                android:layout_weight="0.05"
                android:layout_marginTop="20dp" />
            <TextView
                android:text="@string/edit_profile_more_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.05"
                android:layout_marginTop="5dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine|textCapSentences"
                android:ems="10"
                android:id="@+id/etAboutMe"
                android:hint="@string/edit_profile_influences"
                android:background="@android:color/transparent"
                android:layout_marginTop="10dp"
                android:maxLength="150" />


            <Button
                android:text="@string/edit_profile_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnSaveChanges"
                android:layout_weight="0.05"
                android:layout_marginTop="20dp"
                android:onClick="onClickSave"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>