<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/setup_get_started"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/setup_instruments_hint"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/instrumentGridView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:numColumns="2"
        android:stretchMode="columnWidth"
        android:gravity="center"
        android:fadingEdge="vertical"
        android:background="@drawable/instrument_border"
        android:fadeScrollbars="false"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/btnNext"
        android:layout_marginBottom="5dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup_instruments_next"
        android:id="@+id/btnNext"
        android:layout_gravity="end"
        android:onClick="onClickNext"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/instrumentProgressBar"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>